# airbnbcrawl

./: CONTRIBUTING.md  Makefile  README.md  analitics.ipynb  pyproject.toml  setup.cfg
airbnbcrawl/: autocomplete.py  constants.py  main.py  place.py  results.py  stay_search.py  utils.py
docs/_templates/: badges.html  github.html  moreinfo.html
experiments/: StaysSearch_reponse_1_listing.json  StaysSearch_response.json  autocompletes.json  rest-api_8.http  search.json
old/: find.py  parser.py  place.py  search.py
tests/: test_autocomplete.py  test_normalize.py  test_place.py  test_utils.py
tests/test_example/: test_some_function.py
